4-kubernetes-gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops
  labels:
    name: mlops
    environment: production
